@@ -1,3 +1,4 @@
+usr/bin/xine-list*
 usr/lib/libxine*.so.*
 usr/lib/xine/plugins/*/post/*.so
 usr/lib/xine/plugins/*/*.so
