@@ -39,6 +39,8 @@ Passed on unmodified.
 Print the compiler flags (for C and Objective C, respectively) that are
 necessary to compile a program that uses \fIlibxine\fP.
 .TP 8
+.B  \-\-bindir
+.TQ 8
 .B  \-\-plugindir
 .TQ 8
 .B  \-\-datadir
@@ -48,8 +50,8 @@ necessary to compile a program that uses \fIlibxine\fP.
 .B  \-\-localedir
 \-\-variable=...
 .br
-Print the directory where, respectively, \fIlibxine\fP plugins, data files,
-scripts and locale data are stored/expected.
+Print the directory where, respectively, \fIlibxine\fP binaries, plugins,
+data files, scripts and locale data are stored/expected.
 .TP 8
 .B  \-\-prefix=PREFIX
 \-\-define\-variable=prefix=PREFIX
